# speakersafetyd

./: .gitignore  95-speakersafetyd.rules  Cargo.toml  LICENSE  Makefile  README.md  j314.conf  speakersafetyd.service  speakersafetyd.sysusers  speakersafetyd.tmpfiles
conf/: j413.conf
conf/apple/: j180.conf  j274.conf  j293.conf  j313.conf  j314.conf  j316.conf  j375.conf  j413.conf  j415.conf  j456.conf  j457.conf  j474.conf  j475.conf  j493.conf  j504.conf  j514.conf  j516.conf  j613.conf  j615.conf
docs/: audump.py  speakers.txt
src/: blackbox.rs  helpers.rs  main.rs  types.rs  uclamp.rs
testing/: analyze.py  make_test_file.py
