[package]
name = "speakersafetyd"
version = "1.0.0"
edition = "2021"
license = "MIT"
description = "Speaker protection daemon for embedded Linux systems"
repository = "https://github.com/AsahiLinux/speakersafetyd/"

[dependencies]
alsa = "^0.8.1"
configparser = { version = "^3.0.3", features=["indexmap"] }
clap = { version = "4.1.6", features=["derive"] }
log = "0.4.17"
clap-verbosity-flag = "2.0.0"
simple_logger = "1.16.0"
chrono = "0.4.31"
json = "0.12.4"
signal-hook = "0.3.17"
libc = "0.2.150"
