[package]
name = "speakersafetyd"
version = "1.1.2"
edition = "2021"
license = "MIT"
description = "Speaker protection daemon for embedded Linux systems"
repository = "https://github.com/AsahiLinux/speakersafetyd/"

[dependencies]
alsa = "^0.11.0"
configparser = { version = "^3.1.0", features=["indexmap"] }
clap = { version = "^4.6.1", features=["derive"] }
log = "^0.4.29"
clap-verbosity-flag = "^3.0.4"
simple_logger = "^5.2.0"
chrono = "^0.4.44"
signal-hook = "^0.4.4"
libc = "^0.2.150"
